# rest_framework_basics

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  openapi-schema.yml  pyproject.toml
config/: settings.py  urls.py
tasks/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_remove_user_name_alter_user_password_and_more.py  0003_alter_message_created_by.py
