[tool.poetry]
name = "rest_framework_basics"
version = "0.1.0"
description = ""
authors = ["Danya <danya.rodnyakov228@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
djangorestframework = "^3.14.0"
django-stubs = "^4.2.0"

# auth
dj-rest-auth = "^4.0.0"
django-allauth = "^0.54.0"

# schema and documentation
drf-yasg = "^1.21.5"
pyyaml = "^6.0"
uritemplate = "^4.1.1"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
